--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@ ___
 # Eerste stappen
 
 - stap over naar dagelijks gebruik Linux/Unix, bv <small>
-  - Apple (2008 laptop [€300](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
+  - Apple (2012 laptop [€400](http://www.marktplaats.nl/z/computers-en-software/laptops-apple/zo-goed-als-nieuw-gebruikt-macbook-pro-15-inch.html?categoryId=325&priceTo=400%2C00&attributes=S%2C31&attributes=S%2C32&attributes=S%2C2373&attributes=S%2C2369&startDateFrom=always))
   - Chromebook of [CloudReady](http://www.theverge.com/2016/3/7/11173836/neverware-cloudready-how-to-convert-pc-into-chromebook-free) of [GalliumOS](https://chrx.org/#recommendations)
   - Ubuntu (_scholen_, _startups_) of Fedora (_enterprises_) (op [Chromebook](https://github.com/iantrich/ChrUbuntu-Guides/) bv met [crouton](https://github.com/dnschneid/crouton))</small>
 - Open een [GitHub](https://github.com/join) of [GitLab](https://gitlab.com/) account
-  - leer git(hub): <small>[grafisch](http://learngitbranching.js.org), [boek](https://git-scm.com/book/), [videos](https://www.youtube.com/c/githubguides), tips [[0](http://ohshitgit.com), [1](http://www.neuro.polymtl.ca/tips_and_tricks/git), [2](https://zachholman.com/talk/git-github-secrets/)], cheatsheets [[1](https://services.github.com/kit/downloads/github-git-cheat-sheet.pdf), [2](http://www.cheat-sheets.org/saved-copy/git-cheat-sheet.pdf), [3](http://zeroturnaround.com/rebellabs/git-commands-and-best-practices-cheat-sheet/), [4](https://github.com/tiimgreen/github-cheat-sheet)], [online training](https://services.github.com/on-demand/resources/learning-path/)</small>
+  - leer git(hub): <small>[grafisch](http://learngitbranching.js.org), [_Pro Git_ boek](https://github.com/progit/progit2/releases), [videos](https://www.youtube.com/c/githubguides), tips [[0](http://ohshitgit.com), [1](http://www.neuro.polymtl.ca/tips_and_tricks/git), [2](https://zachholman.com/talk/git-github-secrets/)], cheatsheets [[1](https://services.github.com/kit/downloads/github-git-cheat-sheet.pdf), [2](http://www.cheat-sheets.org/saved-copy/git-cheat-sheet.pdf), [3](http://zeroturnaround.com/rebellabs/git-commands-and-best-practices-cheat-sheet/), [4](https://github.com/tiimgreen/github-cheat-sheet)], [online training](https://services.github.com/on-demand/resources/learning-path/)</small>
 - gebruik markdown (.md) [rfc7763](https://tools.ietf.org/html/rfc7763)/[rfc7764](https://tools.ietf.org/html/rfc7764). Ook op [iOS](http://brettterpstra.com/ios-text-editors/). [Printable Cheat Sheet](https://github.com/Microsoft/azure-docs/blob/master/contributor-guide/media/documents/markdown-cheatsheet.pdf?raw=true)
   - <small>Deze presentatie is gemaakt met [remark](https://github.com/gnab/remark/wiki) en staat op [Github](https://github.com/smartbit/Docker-en-Cloud-Ngi-NGN)</small>
 - gebruik vim, emacs, Sublime, Atom of VS Code
@@ -299,7 +299,9 @@ Kies een specialisatie, platform, certificering of automation.
 ##Kies een specialisatie
 
 - Databases ([Graph](http://www.butleranalytics.com/20-free-and-open-source-graph-database/) bv Neo4j, Cassandra, PostgreSQL, <small>maar [níet MSSQL](https://www.youtube.com/watch?v=PKfvMQx2dBE&list=PLLmDF7dZXwpxmknYeWvV82LeAj8_ylYc3&t=2240)</small>)
-- Orchestration (Kubernetes, Docker Swarm, DC/OS)
+- Orchestration met Kubernetes (of Docker Swarm, DC/OS)
+- Monitoring bv Prometheus
+- Logging bv fluentd
 - PAAS Platform (OpenShift, Apcera, Cloud Foundry, etc)
 - Storage (CEPH, Gluster, Flocker)
 - Networking
@@ -328,10 +330,10 @@ Kies een specialisatie, platform, certificering of automation.
 
 ## Óf haal een Certificeringen
 
-- Kubernetes - [Intro training](https://www.cncf.io/certification/training/) (free) - [CKA](https://www.cncf.io/certification/expert/) training + exam: [$499](https://training.linuxfoundation.org/linux-courses/system-administration-training/kubernetes-fundamentals)
+- Kubernetes - [CKA Admin](https://www.cncf.io/certification/expert/) $300 <small>([$499](https://training.linuxfoundation.org/linux-courses/system-administration-training/kubernetes-fundamentals) incl. training)</small> - [Developer](https://docs.google.com/presentation/d/1bdBWjMzj-xgiO0tq9CDydFPvHr8tDuYZ1sXFgPxxx24/edit#slide=id.g26f0bead20_0_22) $300 - [Software conformance](http://blog.kubernetes.io/2017/10/software-conformance-certification.html)
 - RedHat - [RHCSA](https://www.redhat.com/en/services/training/ex200-red-hat-certified-system-administrator-rhcsa-exam) $500 - [RHCE](https://www.redhat.com/en/services/certification/rhce) $500 - [Ansible](https://www.redhat.com/en/services/training/ex407-red-hat-certificate-expertise-ansible-automation) $600 - [DevOps](https://www.redhat.com/en/services/certification/rhca/devops) 5 examens × $600
 - AWS - [Associate](https://aws.amazon.com/certification/certified-solutions-architect-associate/) $150 - [Professional](https://aws.amazon.com/certification/certified-solutions-architect-professional/) $300 - [DevOps Engineer](https://aws.amazon.com/certification/certified-devops-engineer-professional/) $300
-- Azure €165 - [Ops](https://www.microsoft.com/en-us/learning/mcsa-linux-azure-certification.aspx): [533](https://www.microsoft.com/en-us/learning/exam-70-533.aspx)+[LFCS €300](https://training.linuxfoundation.org/certification/lfcs) - daarna [MCSE Cloud](https://www.microsoft.com/en-us/learning/mcse-cloud-platform-infrastructure.aspx): 1 extra examen bv.  [532 Dev](https://www.microsoft.com/en-us/learning/exam-70-532.aspx) of [534 Archit](https://www.microsoft.com/en-us/learning/exam-70-534.aspx)
+- Azure €165 - [Ops](https://www.microsoft.com/en-us/learning/mcsa-linux-azure-certification.aspx): [533](https://www.microsoft.com/en-us/learning/exam-70-533.aspx)+[LFCS €300](https://training.linuxfoundation.org/certification/lfcs) - daarna [MCSE Cloud](https://www.microsoft.com/en-us/learning/mcse-cloud-platform-infrastructure.aspx): 1 extra examen bv. [532 Dev](https://www.microsoft.com/en-us/learning/exam-70-532.aspx) of [534 Archit](https://www.microsoft.com/en-us/learning/exam-70-534.aspx)
 - Google [Cloud](https://cloud.google.com/certification/) - [Ops](https://cloud.google.com/certification/cloud-architect) $200 - [BigData](https://cloud.google.com/certification/data-engineer) $200 - [Android](https://developers.google.com/training/certification/associate-android-developer/) $149 <small>([$750](https://udacity.zendesk.com/hc/en-us/articles/217077426-How-much-does-the-program-cost-) incl training)</small> - [Mobile Web](https://developers.google.com/training/certification/mobile-web-specialist/) $99
 - Linux Foundation <small>(RedHat, Ubuntu _of_ Suse)</small> - [LFS101](https://www.edx.org/course/introduction-linux-linuxfoundationx-lfs101x-0) intro - [SysAdmin LFCS](https://training.linuxfoundation.org/certification/lfcs) $300 - [Engineer LFCE](https://training.linuxfoundation.org/certification/lfce) $300
 - OpenStack - [COA](https://www.openstack.org/coa) hands-on $300 - [Mirantis](https://www.mirantis.com/blog/mirantis-training-openstack-foundation-certification-exam/) [theorie](https://training.mirantis.com/exam/openstack-exam-mca100) $300 - [hands-on](https://training.mirantis.com/instructor-led-training/openstack-exam-mca200) $600 - [RedHat](https://www.redhat.com/en/services/training/ex210-red-hat-certified-system-administrator-red-hat-openstack-exam) hands-on $600
